--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "lucide-react": "^0.511.0",
+    "mapbox-gl": "^3.12.0",
+    "mapbox-gl-leaflet": "^0.0.16",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
     "swiper": "^11.2.7"
   },
