--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.7"
   },
   "devDependencies": {
